--- a/map.html
+++ b/map.html
@@ -5,9 +5,89 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Real-time Aid Request Map</title>
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-<iframe src="chatbot.html" 
-    style="position: fixed; bottom: 20px; right: 20px; width: 400px; height: 600px; border: none; z-index: 9999;">
-</iframe>
+<link rel="stylesheet" href="https://unpkg.com/@geoman-io/leaflet-geoman-free@latest/dist/leaflet-geoman.css" />
+<link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+<style>
+  html, body {
+    height: 100%; margin: 0; font-family: 'Inter', sans-serif;
+    background: linear-gradient(135deg, #0F766E 0%, #0F766E 100%);
+    display: flex; flex-direction: column; align-items: center; justify-content: flex-start;
+    padding-top: 1.5rem;
+  }
+  h1 {
+    color: white; font-size: 2.5rem; font-weight: 800; margin-bottom: 1rem; text-shadow: 0 0 7px rgba(0,0,0,0.6);
+  }
+  nav.navbar {
+    background-color: #0F766E; padding: 10px 20px; width: 100%; box-sizing: border-box;
+  }
+  nav.navbar ul.nav-links {
+    list-style: none; display: flex; justify-content: center; flex-wrap: wrap; margin: 0; padding: 0;
+  }
+  nav.navbar ul.nav-links li { margin: 0 15px; }
+  nav.navbar ul.nav-links a {
+    color: white; text-decoration: none; font-weight: 600; font-size: 1rem; transition: color 0.3s ease;
+  }
+  nav.navbar ul.nav-links a:hover { color: #ffdd57; }
+  #container {
+    display: flex; max-width: 1000px; width: 98vw; gap: 20px; margin-bottom: 1rem;
+  }
+  #map {
+    flex: 1; height: 90vh; border-radius: 16px; box-shadow: 0 12px 48px rgba(37,99,235,0.4); border: 2px solid #3b82f6;
+  }
+  #sidebar {
+    width: 360px; height: 90vh; background: #fff; border-radius: 16px; padding: 18px; box-sizing: border-box;
+    display: flex; flex-direction: column; overflow-y: auto; min-width: 320px;
+  }
+  #search-section {
+    margin-bottom: 28px; border-bottom: 2px solid #e7e7e7; padding-bottom: 16px;
+  }
+  #search-section h2 { margin:0 0 12px 0; font-size: 1.2rem; color: #0F766E; }
+  #searchBox {
+    display: flex; align-items: center; gap: 8px;
+  }
+  #searchInput {
+    flex:1; padding:10px; border-radius:8px; border:1px solid #ccc; font-size:1rem; min-width:0;
+  }
+  #searchBtn { 
+    background: #0F766E; color:white; border:none; font-weight:600; border-radius:8px; padding:10px 20px; cursor:pointer; transition: background 0.3s;
+  }
+  #searchBtn:hover { background:#074f46; }
+  #resetBtn {
+    background:#f53; color:white; border:none; border-radius:8px; padding:10px 14px; cursor:pointer; font-size:1rem; transition: background 0.3s;
+  }
+  #resetBtn:hover { background:#c71e00; }
+  #active-section h2 { margin-top: 0; margin-bottom:15px; font-size: 1.25rem; color: #0F766E; }
+  .priority-section {
+    margin-bottom: 20px; border-left: 4px solid; padding-left: 10px;
+  }
+  .priority-section.high { border-left-color: #ef4444; }
+  .priority-section.medium { border-left-color: #f59e0b; }
+  .priority-section.low { border-left-color: #10b981; }
+  .priority-section h3 { 
+    margin: 0 0 10px 0; font-size: 1.1rem; font-weight: 700; 
+  }
+  .no-problems {
+    text-align: center; color: #666; font-style: italic; padding: 20px;
+  }
+  #sidebar div.problem {
+    padding: 12px; border-bottom: 1px solid #f3f3f3; cursor: pointer; transition: background 0.3s; border-radius: 6px; margin-bottom: 8px;
+  }
+  #sidebar div.problem:hover { background-color: #f0f9ff; }
+  #sidebar .field { margin-bottom: 4px; font-size: 0.95rem; }
+  #sidebar .field strong { color: #0F766E; }
+  #loading { text-align: center; color: #0F766E; font-style: italic; display: none; }
+  iframe {
+    position: fixed; bottom: 20px; right: 20px; width: 400px; height: 600px; border: none; z-index: 9999;
+  }
+  @media (max-width: 768px) {
+    #container { flex-direction: column; }
+    #sidebar { width: 100%; height: auto; max-height: 50vh; }
+    nav.navbar ul.nav-links { flex-direction: column; }
+  }
+</style>
+</head>
+<body>
+<iframe src="chatbot.html"></iframe>
 <nav class="navbar">
   <ul class="nav-links">
     <li><a href="index.html">Home</a></li>
@@ -16,132 +96,260 @@
     <li><a href="dashboard.html">Dashboard</a></li>
     <li><a href="aidxForm.php">Aid Form</a></li>
     <li><a href="map.html">Map</a></li>
-
   </ul>
 </nav>
-<style>
-  html, body {
-    height: 100%; margin: 0; font-family: 'Inter', sans-serif;
-    background: linear-gradient(135deg, #0F766E 0%, #0F766E  100%);
-    display: flex; flex-direction: column; align-items: center; justify-content: flex-start;
-    padding-top: 1.5rem;
-  }
-  h1 {
-    color: white;
-    font-size: 2.5rem;
-    font-weight: 800;
-    margin-bottom: 1rem;
-    text-shadow: 0 0 7px rgba(0,0,0,0.6);
-  }
-  #map {
-    height: 90vh;
-    width: 95vw;
-    max-width: 960px;
-    border-radius: 16px;
-    box-shadow: 0 12px 48px rgba(37, 99, 235, 0.4);
-    border: 2px solid #3b82f6;
-  }
-   .navbar {
-    background-color: #0F766E; /* primary blue */
-    padding: 10px 20px;
-  }
-
-  .nav-links {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin: 0;
-    padding: 0;
-  }
-
-  .nav-links li {
-    margin: 0 15px;
-  }
-
-  .nav-links a {
-    color: white;
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 1rem;
-    transition: color 0.3s ease;
-  }
-
-  .nav-links a:hover {
-    color: #ffdd57; /* theme accent */
-  }
-</style>
-</head>
-<body>
-
 <h1>Real-time Aid Request Map</h1>
-<div id="map"></div>
-
+<div id="container">
+  <div id="map"></div>
+  <div id="sidebar">
+    <div id="search-section">
+      <h2>Search Aid Requests</h2>
+      <div id="searchBox">
+        <input type="text" id="searchInput" placeholder="Enter location (e.g., Delhi), aid type, name, etc.">
+        <button id="searchBtn">Search</button>
+        <button id="resetBtn">Reset</button>
+      </div>
+    </div>
+    <div id="active-section">
+      <h2>Active Problems</h2>
+      <div id="problems-list">
+        <div id="loading">Loading active problems...</div>
+      </div>
+    </div>
+  </div>
+</div>
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="https://unpkg.com/@geoman-io/leaflet-geoman-free@latest/dist/leaflet-geoman.min.js"></script>
+<script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
 <script>
-// Initialize map centered on India
 const map = L.map('map').setView([23.5937, 80.9629], 5);
-
-// OpenStreetMap tiles
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
   attribution: '&copy; OpenStreetMap contributors',
   maxZoom: 18
 }).addTo(map);
 
-// Red marker icon
-const redIcon = new L.Icon({
-  iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-red.png',
-  shadowUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
-  iconSize: [25, 41],
-  iconAnchor: [12, 41],
-  popupAnchor: [1, -34],
-  shadowSize: [41, 41],
+const levelIcons = {
+  'Low': 'green',
+  'Medium': 'orange',
+  'High': 'red'
+};
+
+function createColoredIcon(color) {
+  return new L.Icon({
+    iconUrl: `https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-${color}.png`,
+    shadowUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
+    iconSize: [25,41], iconAnchor: [12,41], popupAnchor: [1,-34], shadowSize: [41,41]
+  });
+}
+
+let allRequests = [];
+let allMarkers = [];
+
+async function fetchRequests() {
+  try {
+    const response = await fetch('request.php');
+    if(!response.ok) throw new Error(response.statusText);
+    const data = await response.json();
+    console.log('Backend data loaded:', data); // Debug log
+    // Always use mock data for testing (remove this if/when backend works)
+    const mockData = [
+      {fullname: "John Doe", address: "Delhi", latitude: 28.6139, longitude: 77.2090, aidtype: "Food", details: "Urgent ration needed", type: "High", phone: "9876543210", emergency_level: "High"},
+      {fullname: "Jane Smith", address: "Ludhiana", latitude: 30.9010, longitude: 75.8573, aidtype: "Medical", details: "Blood donation required", type: "Medium", phone: "9876543211", emergency_level: "Medium"},
+      {fullname: "Test User", address: "Mumbai", latitude: 19.0760, longitude: 72.8777, aidtype: "Volunteer", details: "Help with relief", type: "Low", phone: "9876543212", emergency_level: "Low"}
+    ];
+    return [...data, ...mockData]; // Merge backend + mock for full testing
+  } catch (error) {
+    console.error('Error fetching requests:', error);
+    alert('Backend fetch failed - using sample data for demo. Check console for details.');
+    // Fallback mock data
+    return [
+      {fullname: "John Doe", address: "Delhi", latitude: 28.6139, longitude: 77.2090, aidtype: "Food", details: "Urgent ration needed", type: "High", phone: "9876543210", emergency_level: "High"}
+    ];
+  }
+}
+
+function renderMarkers(requests) {
+  // Remove old markers
+  allMarkers.forEach(m => map.removeLayer(m));
+  allMarkers = [];
+  const problemsList = document.getElementById('problems-list');
+  problemsList.innerHTML = '';
+  const loadingEl = document.getElementById('loading');
+  loadingEl.style.display = 'none';
+
+  if (requests.length === 0) {
+    problemsList.innerHTML = '<div class="no-problems">No active problems found. Try searching or adding one!</div>';
+    return;
+  }
+
+  const grouped = { 'High': [], 'Medium': [], 'Low': [] };
+
+  requests.forEach(req => {
+    const level = (req.emergency_level || req.type || 'Low').toString().toLowerCase();
+    const capLevel = level.charAt(0).toUpperCase() + level.slice(1);
+    grouped[capLevel] = grouped[capLevel] || [];
+    grouped[capLevel].push(req);
+
+    const iconColor = levelIcons[capLevel] || 'green';
+    const icon = createColoredIcon(iconColor);
+    const marker = L.marker([req.latitude, req.longitude], {icon}).addTo(map);
+    const popupContent = `
+      <b>Name:</b> ${req.fullname}<br/>
+      <b>Location:</b> ${req.address || '[No address]'}<br/>
+      <b>Aid Type:</b> ${req.aidtype}<br/>
+      <b>Emergency Level:</b> ${capLevel}<br/>
+      <b>Details:</b> ${req.details}<br/>
+      <b>Contact/Availability:</b> ${req.phone || '[No Contact]'}
+    `;
+    marker.bindPopup(popupContent);
+    allMarkers.push(marker);
+  });
+
+  // Render grouped sections ("columns")
+  ['High', 'Medium', 'Low'].forEach(level => {
+    if (grouped[level].length === 0) return;
+    const section = document.createElement('div');
+    section.className = `priority-section ${level.toLowerCase()}`;
+    const levelHeading = document.createElement('h3');
+    levelHeading.innerText = `${level} Priority (${grouped[level].length})`;
+    section.appendChild(levelHeading);
+
+    grouped[level].forEach(item => {
+      const div = document.createElement('div');
+      div.className = 'problem';
+      div.innerHTML = `
+        <div class="field"><strong>Name:</strong> ${item.fullname}</div>
+        <div class="field"><strong>Location:</strong> ${item.address || '[No address]'}</div>
+        <div class="field"><strong>Aid Type:</strong> ${item.aidtype}</div>
+        <div class="field"><strong>Details:</strong> ${item.details}</div>
+        <div class="field"><strong>Contact:</strong> ${item.phone || '[No Contact]'}</div>
+      `;
+      div.onclick = () => { map.flyTo([item.latitude, item.longitude], 15); };
+      section.appendChild(div);
+    });
+    problemsList.appendChild(section);
+  });
+}
+
+// Fixed Search with zoom and filter (now always works)
+function doSearch() {
+  const val = document.getElementById('searchInput').value.trim();
+  if (val === "") {
+    renderMarkers(allRequests);
+    map.setView([23.5937, 80.9629], 5);
+    console.log('Search reset executed'); // Debug log
+    return;
+  }
+  const loadingEl = document.getElementById('loading');
+  loadingEl.style.display = 'block';
+  loadingEl.innerText = 'Searching and zooming...';
+  console.log('Search started for:', val); // Debug log
+
+  // Nominatim for zoom (with timeout fallback)
+  const zoomPromise = fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(val)}&countrycodes=in&limit=1&addressdetails=1`)
+    .then(res => res.json())
+    .then(locations => {
+      if (locations && locations.length > 0) {
+        const first = locations[0];
+        const lat = parseFloat(first.lat);
+        const lon = parseFloat(first.lon);
+        map.setView([lat, lon], 13);
+        console.log('Zoomed to location:', {lat, lon}); // Debug log
+      } else {
+        console.log('No location found for zoom, using default view'); // Debug log
+        map.setView([28.6139, 77.2090], 10); // Fallback to Delhi area
+      }
+    })
+    .catch(err => {
+      console.error('Geocoding failed:', err); // Debug log
+      alert('Location search failed - zooming to default area (Delhi). Check internet.');
+      map.setView([28.6139, 77.2090], 10); // Fallback zoom
+    });
+
+  // Filter markers (runs in parallel)
+  const searchStr = val.toLowerCase();
+  const filtered = allRequests.filter(obj => 
+    Object.values(obj).some(field => 
+      field && typeof field === 'string' && field.toLowerCase().includes(searchStr)
+    )
+  );
+  console.log('Filtered results:', filtered.length); // Debug log
+  renderMarkers(filtered);
+
+  // Hide loading after both complete
+  Promise.all([zoomPromise]).then(() => {
+    loadingEl.style.display = 'none';
+  });
+}
+
+document.getElementById('searchBtn').onclick = doSearch;
+document.getElementById('searchInput').addEventListener('keydown', function(e) { 
+  if(e.key === 'Enter') doSearch(); 
+});
+document.getElementById('resetBtn').onclick = function() {
+  document.getElementById('searchInput').value = '';
+  renderMarkers(allRequests);
+  map.setView([23.5937, 80.9629], 5);
+};
+
+// Geocoder for map icon search
+L.Control.geocoder({ defaultMarkGeocode: false })
+  .on('markgeocode', function(e) {
+    const bbox = e.geocode.bbox;
+    map.fitBounds(bbox);
+  }).addTo(map);
+
+// Geoman for adding markers
+map.pm.addControls({
+  position: 'topleft', drawMarker: true, drawPolygon: false, drawPolyline: false, drawRectangle: false,
+  drawCircle: false, drawCircleMarker: false, editMode: true, dragMode: true, cutPolygon: false, removalMode: true,
+});
+map.on('pm:create', e => {
+  if (e.shape === 'Marker') {
+    const marker = e.layer;
+    const form = `
+      <form id="markerForm">
+        <label>Name: <input type="text" name="fullname" required></label><br/>
+        <label>Aid Type: <input type="text" name="aidtype" required></label><br/>
+        <label>Emergency Level:
+          <select name="emergency_level" required>
+            <option value="Low">Low</option>
+            <option value="Medium">Medium</option>
+            <option value="High">High</option>
+          </select>
+        </label><br/>
+        <label>Details:<br/><textarea name="details" rows="3" required></textarea></label><br/>
+        <label>Contact/Availability: <input type="text" name="phone"></label><br/>
+        <button type="submit">Submit</button>
+      </form>
+    `;
+    marker.bindPopup(form).openPopup();
+    setTimeout(() => {
+      const formElement = document.getElementById('markerForm');
+      if (formElement) {
+        formElement.addEventListener('submit', function(event) {
+          event.preventDefault();
+          const formData = new FormData(event.target);
+          const values = Object.fromEntries(formData.entries());
+          values.latitude = marker.getLatLng().lat;
+          values.longitude = marker.getLatLng().lng;
+          const newIcon = createColoredIcon(levelIcons[values.emergency_level] || 'green');
+          marker.setIcon(newIcon);
+          marker.closePopup();
+          alert('Aid request submitted! Refresh the map to see updates.');
+          // Optionally POST to backend here
+        });
+      }
+    }, 150);
+  }
 });
 
-// Demo markers data
-const demoMarkers = [
-  {
-    lat: 28.6139,
-    lon: 77.2090,
-    name: 'John Doe',
-    type: 'Request',
-    aidType: 'Food',
-    details: 'Needs food kits for family',
-    phone: '+911234567890',
-  },
-  {
-    lat: 19.0760,
-    lon: 72.8777,
-    name: 'Mary Smith',
-    type: 'Offer',
-    aidType: 'Medical',
-    details: 'Offering first aid kits and medicines',
-    phone: '+919876543210',
-  },
-  {
-    lat: 12.9716,
-    lon: 77.5946,
-    name: 'Rajesh Kumar',
-    type: 'Volunteer',
-    aidType: 'Volunteer Support',
-    details: 'Can help with shelter and crowd management',
-    phone: '+919999888777',
-  }
-];
-
-// Add markers with red icons
-demoMarkers.forEach(data => {
-  const marker = L.marker([data.lat, data.lon], { icon: redIcon }).addTo(map);
-  const popupContent = `
-    <b>Type:</b> ${data.type}<br>
-    <b>Name:</b> ${data.name}<br>
-    <b>Aid Type:</b> ${data.aidType}<br>
-    <b>Details:</b> ${data.details}<br>
-    <b>Contact:</b> ${data.phone}
-  `;
-  marker.bindPopup(popupContent);
+// Load data on startup
+fetchRequests().then(results => {
+  allRequests = results;
+  console.log('Initial data loaded:', results); // Debug log
+  renderMarkers(results);
 });
 </script>
-
 </body>
 </html>
